--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
     "keywords": ["silex", "twig", "asset"],
     "homepage": "http://github.com/Entea/Silex-Twig-Simple-Asset-Extension",
     "require": {
-        "php": ">=5.3.0",
-        "twig/twig": "dev-master"
+        "php": ">=5.3.0"
     },
     "autoload": {
         "psr-0": {"Entea": "."}
